# AtaraxicModules

./: .gitignore  CLAUDE.md  README.md
ADVCA/: Makefile  README.md  plugin.json
ADVCA/src/: ADVCA.cpp  plugin.cpp  plugin.hpp
Bedrock/: Makefile  plugin.json
Bedrock/src/: Bedrock.cpp  plugin.cpp  plugin.hpp
Urusai/: Makefile  README.md  noise_sim.cpp  plugin.json
Urusai/src/: Urusai.cpp  UrusaiDsp.hpp  plugin.cpp  plugin.hpp
Vesper/: Makefile  plugin.json
Vesper/src/: Vesper.cpp  plugin.cpp  plugin.hpp
lib/: CMakeLists.txt
lib/ataraxic_dsp/: API.md  ataraxic_dsp.hpp  envelope.hpp  noise.hpp  onepole.hpp  oscillator.hpp  pot.hpp  saturator.hpp  schmitt_trigger.hpp  vca.hpp
